--- a/package.json
+++ b/package.json
@@ -2,10 +2,29 @@
   "name": "quiz-tool",
   "version": "1.0.0",
   "description": "A quick and dirty quiz tool.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
+    "build": "webpack",
+    "prepublish": "babel lib -d dist",
+    "start": "webpack-dev-server --content-base=dist/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "devDependencies": {
+    "babel-cli": "^6.11.4",
+    "dotenv": "^2.0.0",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "html-webpack-plugin": "^2.15.0"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "babel-loader": "^6.2.4",
+    "babel-preset-react": "^6.11.1",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
